Fix formatting issues in index.html and App.jsx

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">I. 
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dn4trwbmw/image/upload/v1748848852/wq1lhvlmoja1qh9bzojh.png" />
